--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "keycloak-js": "^17.0.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "keycloak-js": "^20.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
